feat: add get grade report
